--- a/app/src/main/res/layout/item_tournament.xml
+++ b/app/src/main/res/layout/item_tournament.xml
@@ -26,7 +26,7 @@
             android:id="@+id/tv_tournament_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/nombre_del_torneo"
+            android:text="@string/tournamentName"
             android:textSize="18sp"
             android:textStyle="bold"
             android:maxLines="2"
@@ -40,7 +40,7 @@
             android:id="@+id/tv_tournament_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/descripci_n_del_torneo"
+            android:text="@string/tournamentDescription"
             android:textSize="14sp"
             android:maxLines="2"
             android:ellipsize="end"
@@ -54,7 +54,7 @@
             android:id="@+id/tv_tournament_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/fecha_lugar"
+            android:text="@string/dateAndPlace"
             android:textSize="12sp"
             android:textColor="?android:attr/textColorSecondary"
             app:layout_constraintEnd_toEndOf="parent"
