--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tv_app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tournamaker"
+            android:text="@string/app_name"
             android:textSize="36sp"
             android:textStyle="bold"
             android:textColor="?attr/colorPrimary"
@@ -29,7 +29,7 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/iniciar_sesi_n"
+            android:text="@string/login"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             android:id="@+id/til_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/contrase_a"
+            android:hint="@string/password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:startIconDrawable="@android:drawable/ic_lock_lock"
             app:endIconMode="password_toggle"
@@ -82,7 +82,7 @@
             android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="@string/iniciar_sesi_n"
+            android:text="@string/login"
             android:textSize="16sp"
             android:textStyle="bold"
             app:cornerRadius="8dp"
@@ -105,7 +105,7 @@
             android:id="@+id/tv_go_to_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sin_cuenta"
+            android:text="@string/withoutAccount"
             android:textColor="?attr/colorPrimary"
             android:textSize="14sp"
             android:textStyle="bold"
