--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/crear_cuenta"
+            android:text="@string/createAccount"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
             android:id="@+id/til_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/nombre_de_usuario"
+            android:hint="@string/username"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:startIconDrawable="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
             android:id="@+id/til_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/nombre_completo"
+            android:hint="@string/full_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:startIconDrawable="@android:drawable/ic_menu_myplaces"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:id="@+id/til_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/contrase_a"
+            android:hint="@string/password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:startIconDrawable="@android:drawable/ic_lock_lock"
             app:endIconMode="password_toggle"
@@ -109,7 +109,7 @@
             android:id="@+id/btn_register"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="@string/registrarse"
+            android:text="@string/register"
             android:textSize="16sp"
             android:textStyle="bold"
             app:cornerRadius="8dp"
@@ -132,7 +132,7 @@
             android:id="@+id/tv_go_to_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/con_cuenta"
+            android:text="@string/withAccount"
             android:textColor="?attr/colorPrimary"
             android:textSize="14sp"
             android:textStyle="bold"
