--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -137,6 +137,26 @@
         android:id="@+id/userPageFragment"
         android:name="com.example.tournamaker.ui.user.UserPageFragment"
         android:label="Perfil"
-        tools:layout="@layout/fragment_user_page" />
+        tools:layout="@layout/fragment_user_page" >
+        <action
+            android:id="@+id/action_userPageFragment_to_tournamentViewFragment"
+            app:destination="@id/tournamentViewFragment" />
+        <action
+            android:id="@+id/action_userPageFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_userPageFragment_to_teamViewFragment"
+            app:destination="@id/teamViewFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/teamViewFragment"
+        android:name="com.example.tournamaker.ui.team.TeamViewFragment"
+        android:label="Equipo"
+        tools:layout="@layout/fragment_team_view">
+        <argument
+            android:name="teamId"
+            app:argType="string" />
+    </fragment>
 
 </navigation>
