--- a/app/src/main/res/menu/fab_menu.xml
+++ b/app/src/main/res/menu/fab_menu.xml
@@ -2,14 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/createTournamentFragment"
-        android:icon="@android:drawable/ic_menu_agenda"
-        android:title="@string/create_tournament" />
+        android:title="Crear Torneo" />
     <item
         android:id="@+id/createMatchFragment"
-        android:icon="@android:drawable/ic_menu_today"
-        android:title="@string/create_match" />
+        android:title="Crear Partido" />
     <item
         android:id="@+id/createTeamFragment"
-        android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="@string/create_team" />
+        android:title="Crear Equipo" />
 </menu>
