Verificación email y Solicitud de Unirse con Notis v0

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -197,11 +197,17 @@
             android:id="@+id/action_myMatchesFragment_to_matchViewFragment"
             app:destination="@id/matchViewFragment" />
     </fragment>
-    
+
     <fragment
         android:id="@+id/personalDataFragment"
         android:name="com.example.tournamaker.ui.user.PersonalDataFragment"
         android:label="Datos Personales"
         tools:layout="@layout/fragment_personal_data" />
+
+    <fragment
+        android:id="@+id/notificationsFragment"
+        android:name="com.example.tournamaker.ui.notification.NotificationsFragment"
+        android:label="Notificaciones"
+        tools:layout="@layout/fragment_notifications" />
 
 </navigation>
