--- a/app/src/main/res/layout/fragment_team_view.xml
+++ b/app/src/main/res/layout/fragment_team_view.xml
@@ -43,11 +43,21 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_join_request"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_participants_label"
         app:layout_constraintTop_toBottomOf="@+id/tv_participants_label"
         tools:listitem="@android:layout/simple_list_item_1" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_join_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Solicitar Unirse"
+        android:layout_margin="16dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
