--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/notificationsFragment"
+        android:icon="@android:drawable/ic_popup_reminder"
+        android:title="Notificaciones"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/userPageFragment"
         android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="@string/profile"
+        android:title="@string/action_profile"
         app:showAsAction="ifRoom" />
+
 </menu>
