--- a/app/src/main/res/layout/fragment_match_view.xml
+++ b/app/src/main/res/layout/fragment_match_view.xml
@@ -76,12 +76,18 @@
         app:layout_constraintStart_toEndOf="@+id/tv_match_date_label"
         tools:text="15 de Enero, 2025" />
 
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/content_group"
+    <Button
+        android:id="@+id/btn_request_to_join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="tv_team1_name,tv_team2_name,tv_score,tv_match_status_label,tv_match_status,tv_match_date_label,tv_match_date" />
+        android:layout_marginTop="16dp"
+        android:text="Request to Join"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_match_date"
+        tools:visibility="visible" />
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
